apps/guestbook/guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-v1
  namespace: guestbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
        version: "1.0"
    spec:
      containers:
        - name: guestbook
          image: ibmcom/guestbook:v1
          ports:
            - name: http-server
              containerPort: 3000
