apps/guestbook/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  namespace: guestbook
  labels:
    app: guestbook
spec:
  selector:
    app: guestbook
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
