apps/guestbook/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  namespace: guestbook
  labels:
    app: redis
    role: slave
spec:
  ports:
    - port: 6379
      targetPort: redis-server
  selector:
    app: redis
    role: slave
